# benchmarker

./: .gitignore  LICENSE  README.md  pyproject.toml
src/perfect_swe_bench/: agent_harness.py  grader.py  models.py  mutation.py  runner.py  sandbox.py  scoring.py  verifier.py
tasks/calculator_bug/: task.yaml
tasks/calculator_bug/patches/broken/: calculator.py
tasks/calculator_bug/patches/correct/: calculator.py
tasks/calculator_bug/patches/correct/tests/: test_agent_fix.py
tasks/calculator_bug/repo/tests/: test_public.py
tasks/calculator_bug/verifier/: test_hidden.py  test_properties.py
tasks/url_parser/: task.yaml
tasks/url_parser/patches/broken/: utils.py
tasks/url_parser/patches/correct/: url.py
tasks/url_parser/patches/correct/tests/: test_agent_url.py
tasks/url_parser/repo/: url.py  utils.py
tasks/url_parser/repo/tests/: test_public.py
tasks/url_parser/verifier/: test_hidden.py  test_properties.py
