[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "perfect-swe-bench"
version = "0.1.0"
description = "A verifier-centric, contamination-resistant coding benchmark."
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "pytest>=7.0",
    "hypothesis>=6.0",
]

[project.scripts]
perfect-swe-bench = "perfect_swe_bench.runner:main"

[tool.setuptools.packages.find]
where = ["src"]
